# coloring-ai

./: .gitignore  README.md  main.py  pyproject.toml
coloring_ai_assistant/: manage.py
coloring_ai_assistant/coloring_ai_assistant/: asgi.py  settings.py  urls.py  wsgi.py
image_decomposition/: app.py  process_image.py
image_decomposition/templates/: index.html
